--- a/index.html
+++ b/index.html
@@ -64,10 +64,15 @@ html, body, #googft-mapCanvas {
 <button onclick="prueba(producto)"style="position: relative ; top: 40px ;left:20px;" 	>Enviar</button>
 <button onclick="prueba2(video)"style="position: relative ; top: 475px ;left:1090px;" 	>Enviar</button>
 <script type="text/javascript">
+	
 function prueba2(video) {
+	
 var VIDEO=document.getElementById("video").value;
+
 document.getElementById("MyVid").src =VIDEO;
+
 }
+	
 function prueba(producto,evento) {
 var PATENTE=document.getElementById("producto").value;
 var EVENTO=document.getElementById("evento").value;  
@@ -102,7 +107,7 @@ leftFrame.location.href = iframeUr2;
 <form name="hiddenForm">
 <div><input name="hiddenField" type="hidden"></div>
 </form>
-<iframe src=""id="MyVid"frameborder="0" allowfullscreen="1" width="512" height="384" style="display:scroll;position:fixed;top:82px;left:1050px;border: solid orange ;"></iframe>
+<iframe id="MyVid"frameborder="0" allowfullscreen="1" width="512" height="384" style="display:scroll;position:fixed;top:82px;left:1050px;border: solid orange ;"></iframe>
 <img alt="full screen background image" src="Imagenes/FONDO.jpg" id="full-screen-background-image" /> 
 <input type="text" id="video" size="50" style="position: relative ; top: 455px ;left:1050px;" > 
 <iframe id="Mapa" width="800" height="500" scrolling="no" frameborder="no" name="mainframe" src="" style="margin: 40px auto 130px 240px;border: solid orange ;"></iframe>
