--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ leftFrame.location.href = iframeUr2;
 <form name="hiddenForm">
 <div><input name="hiddenField" type="hidden"></div>
 </form>
-<iframe src="https://drive.google.com/file/d/1ohVD4MrPPGIh7NZik9vU9p77LYwGRvKc" id="MyVid"frameborder="0" allowfullscreen="1" width="512" height="384" style="display:scroll;position:fixed;top:82px;left:1050px;border: solid orange ;"></iframe>
+<iframe src="https://drive.google.com/file/d/1ohVD4MrPPGIh7NZik9vU9p77LYwGRvKc/view?usp=sharing" id="MyVid"frameborder="0" allowfullscreen="1" width="512" height="384" style="display:scroll;position:fixed;top:82px;left:1050px;border: solid orange ;"></iframe>
 <img alt="full screen background image" src="Imagenes/FONDO.jpg" id="full-screen-background-image" /> 
 <input type="text" id="video" size="50" style="position: relative ; top: 455px ;left:1050px;" > 
 <iframe id="Mapa" width="800" height="500" scrolling="no" frameborder="no" name="mainframe" src="" style="margin: 40px auto 130px 240px;border: solid orange ;"></iframe>
