--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ html, body, #googft-mapCanvas {
         left: 0;
     }
 </style>
+<link rel="shortcut icon" href="Imagenes/favicon.ico" /> 
 
-<link rel="shortcut icon" href="Imagenes/phpThumb_generated_thumbnailico.ico">
 <body style="overflow-y:hidden ; overflow-x: hidden">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
